# mufasa

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake_release.yml
src/: bitboard.cpp  bitboard.hpp  engine.cpp  engine.hpp  magics.cpp  magics.hpp  main.cpp  misc.cpp  misc.hpp  piece.cpp  piece.hpp  piecetable.cpp  piecetable.hpp  uci.cpp  uci.hpp
tests/: tests.cpp
